[tool.poetry]
name = "cron"
version = "0.1.0"
description = ""
authors = ["Moritz <fullermoritz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ic-py = "^1.0.1"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
cron-nft = 'cron.cron:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
